# rugui

./: .gitignore  Cargo.toml  readme.md
examples/: backgrounds.rs  children.rs  drag_drop.rs  events.rs  full.rs  hello.rs  select.rs  text.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs
rugui-winit-events/: Cargo.toml
rugui-winit-events/src/: lib.rs
src/: events.rs  lib.rs  render.rs  styles.rs  texture.rs  winit.rs
src/shaders/: color.wgsl  instancing.wgsl  linear_grad.wgsl  radial_grad.wgsl  texture.wgsl
test_app/: Cargo.toml
test_app/src/: main.rs
