[package]
name = "rugui"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = {version = "1.16.3", features = ["derive"]}
image = "0.25.2"
nalgebra = "0.33.0"
wgpu = "22.1.0"


[dev-dependencies]
winit = "0.30.5"
examples-common = { path = "examples/common" }
pollster = "0.3.0"
rugui-winit-events = { path = "rugui-winit-events" }