[package]
name = "rugui"
description = "Real-time GUI library for games"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/it-2001/rugui"
readme = "readme.md"
keywords = ["gamedev", "graphics", "gui", "retained_gui", "wgpu"]
categories = ["rendering", "gui", "game-development", "rendering::engine"]

[dependencies]
bytemuck = {version = "1.16.3", features = ["derive"]}
cosmic-text = "0.12.1"
image = "0.25.2"
wgpu = "22.1.0"
document-features = "0.2.10"
winit = { version = "0.30.5", optional = true }
clipboard = {version = "0.5.0", optional = true}

[features]
#! If you want to use the bare bones version of this library.
#! You can do so by including `rugui` like this:
#!
#! ```toml
#! rugui = { version = "*", default-features = false }
#! ```
default = ["full"]
## adds winit module that helps with integration of winit events
winit = ["dep:winit"]
## enables clipboard integration
clipboard = ["dep:clipboard"]
## Enabless all features
full = ["winit", "clipboard"]


[dev-dependencies]
winit = "0.30.5"
examples-common = { path = "examples/common" }
pollster = "0.3.0"


[[example]]
name = "select"
required-features = ["winit"]

[[example]]
name = "events"
required-features = ["winit"]

[[example]]
name = "full"
required-features = ["winit"]
